(try)append and insert operations don't need new operator for PODs https://bugs.webkit.org/show_bug.cgi?id=128185

Patch by Wojciech Bielawski <w.bielawski@samsung.com> on 2014-02-14
Reviewed by Darin Adler.

Vector's methods use VectorCopier to copy data.
VectorCopier for PODs exteded to be used with different types. For different types placement new copy approach is applied. For the same types memcpy is applied.

* wtf/Vector.h:
(WTF::OverflowHandler>::append): use VectorCopier to copy data.
(WTF::OverflowHandler>::tryAppend): use VectorCopier to copy data.
(WTF::OverflowHandler>::insert): use VectorCopier to copy data.

Canonical link: https://commits.webkit.org/146833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164097 268f45cc-cd09-0410-ab3c-d52691b4dbfc